fixed overflow-x issue

--- a/public/stylings/nonGeek.css
+++ b/public/stylings/nonGeek.css
@@ -1,9 +1,7 @@
 html {
   box-sizing: border-box;
-  scrollbar-width: none;
-  overflow: -moz-scrollbars-none;
-  -ms-overflow-style: none;
-  scroll-behavior: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -13,7 +11,7 @@ html {
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 footer {
